[gd_scene load_steps=6 format=3 uid="uid://d4f6kbsr0nabf"]

[ext_resource type="Script" path="res://Scenes/Components/ManagementsPanels/SawmillPanel/sawmillpanel.gd" id="1_at1k5"]
[ext_resource type="PackedScene" uid="uid://lcmk3kahmkxi" path="res://Scenes/Components/ClosingCross/closing_cross.tscn" id="2_56dwg"]
[ext_resource type="Theme" uid="uid://hxwshs2g0gyx" path="res://Themes/header_management_panel.tres" id="3_xjdn0"]
[ext_resource type="PackedScene" uid="uid://vcyw787rvig7" path="res://Scenes/Components/LevelInitiator/level_initiator.tscn" id="4_onl04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5av4"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1, 1, 1, 0.65098)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="SawmillPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_at1k5")

[node name="PanelContainer" type="PanelContainer" parent="."]
y_sort_enabled = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e5av4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
y_sort_enabled = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "SCIERIE"

[node name="ClosingCross" parent="PanelContainer/VBoxContainer/Header" instance=ExtResource("2_56dwg")]
layout_mode = 2
size_flags_horizontal = 10

[node name="Content" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_vertical = 3

[node name="Ameliorations" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Content/Ameliorations"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Content/Ameliorations/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xjdn0")
text = "AMELIORATIONS"
horizontal_alignment = 1

[node name="LevelsInitiator" parent="PanelContainer/VBoxContainer/Content/Ameliorations" instance=ExtResource("4_onl04")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/ClosingCross" to="." method="_on_closing_cross_pressed"]
[connection signal="level_unlocked" from="PanelContainer/VBoxContainer/Content/Ameliorations/LevelsInitiator" to="." method="_on_levels_initiator_level_unlocked"]
